--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./base/rem";
 @import "./utilities/variable";
 @import "./utilities/mixins";
+@import "./base/typos";
 @import "./layout/body";
 @import "./layout/footer";
 @import "./components/bootstrap";
@@ -12,10 +13,6 @@
 @import "./layout/contacto";
 @import "./layout/media-tablet";
 @import "./layout/media-mobile";
-
-
-/*llegue hasta 1:16 de la clase*/
-
 
 
 
