--- a/scss/utilities/_variable.scss
+++ b/scss/utilities/_variable.scss
@@ -4,6 +4,6 @@ $color-3:#0b1f2a; /*background index, nombre index*/
 $color-4: #f2f4f3; /*backgrounds: footer, download cv, button info agenda, contact form, button contacto, */
 $font-1:'Rubik Dirt', cursive; /*nav index, h1 pages*/
 $font-2:'Anton', sans-serif; /*nav pages, titulos card agenda*/
-$font-3:'Adamina', serif; /*p*/
+$font-3:'Roboto Condensed', sans-serif;; /*p* /
 
 /*bs no me admitió variables, OJO! Cambiar a mano*/
