--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -2,27 +2,38 @@
 
 h1 {
     text-align: center; /*titulos de las paginas centrados */
-    padding: 30px;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
     font-family: $font-1;
     font-weight: 500; 
     font-size: 4.0rem;
     color: $color-2; 
     letter-spacing: 15px;
+    margin-bottom: 20px;
 }
 
-div h2 {
-    padding: 15px;
+h3 {
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    @include typos ($font-3, 2.0rem, $color-2);
+    letter-spacing: 3px;
+}
+
+h4 {
     text-align: center;
     letter-spacing: 3px;
-    font-family: $font-2;
-    font-size: 2.0rem;
-    font-weight: lighter;
+    @include typos ($font-3, 2.0rem, $color-2);
+    font-weight: 600;
     height: 100px;
     @include flex (row,center);
     align-items: center;
 }
 
 p {
-    @include typos ($font-3, 1.7rem, $color-1);
+    font-family: $font-3;
 }
+
 /*fin reglas del body*/
