--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -25,8 +25,21 @@ select {
     @extend input;
 }
 
+.link-contacto-footer {
+    text-align: center;
+    align-self: center;
+    a {
+        text-decoration: none;
+        @include typos ($font-3, 1.6rem, $color-1);
+    }
+    &:hover {
+        font-weight: 600;
+    }
+}
+
 .contendor-formulario { /***  F L E X B O X  ***/
     @include flex (row, center);
+    margin-top: 30px;
 }
 
 .formulario__contacto { /***  F L E X B O X  ***/
