--- a/scss/layout/_media-tablet.scss
+++ b/scss/layout/_media-tablet.scss
@@ -28,7 +28,7 @@
         /*align-items: center;*/
     }
     .banner-index {
-        background-image: url(../../assets/img/tablet/foto-index-tablet.jpg);
+        background-image: url(../assets/img/tablet/foto-index-tablet.jpg);
     }
     .adam {
         letter-spacing: 1.5rem;
