--- a/scss/utilities/_variable.scss
+++ b/scss/utilities/_variable.scss
@@ -1,9 +1,9 @@
-$color-1: #5b6972; /*p, borders img, video y cards de agenda, titulos card agenda, background boton contact form*/
-$color-2: #153c50; /*a index, texto h1, text button agenda*/
-$color-3:#0b1f2a; /*background index, nombre index*/
-$color-4: #f2f4f3; /*backgrounds: footer, download cv, button info agenda, contact form, button contacto, */
-$font-1:'Rubik Dirt', cursive; /*nav index, h1 pages*/
-$font-2:'Anton', sans-serif; /*nav pages, titulos card agenda*/
-$font-3:'Roboto Condensed', sans-serif;; /*p* /
+$color-1: #5b6972; /*$color-1: p, borders img, video y cards de agenda, titulos card agenda, background boton contact form*/
+$color-2: #153c50; /*$color-2: a index, texto h1, text button agenda*/
+$color-3:#0b1f2a; /*$color-3: background index, nombre index*/
+$color-4: #f2f4f3; /*$color-4: backgrounds: footer, download cv, button info agenda, contact form, button contacto, */
+$font-1:'Rubik Dirt', cursive; /*$font-1: nav index, h1 pages*/
+$font-2:'Anton', sans-serif; /*$font-2: nav pages, titulos card agenda*/
+$font-3:'Roboto Condensed', sans-serif;; /*$font-3: p* /
 
 /*bs no me admitió variables, OJO! Cambiar a mano*/
