--- a/css/style.css
+++ b/css/style.css
@@ -820,9 +820,9 @@ textarea {
       margin-bottom: 10px; }
   /*fin reglas especiales footer MOBILE*/
   /*REGLAS ESPECIALES INDEX - MOBILE*/
-  .banner__index {
+  .banner-index {
     background-image: url(../assets/img/mobile/foto-index-mobile.jpg);
-    background-position: cover; }
+    object-fit: fill; }
   .container-index {
     /***  G R I D S  ***/
     height: 100vh;
