--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -51,9 +51,10 @@
 
 
     /*REGLAS ESPECIALES INDEX - MOBILE*/
-    .banner__index {
+
+    .banner-index {
         background-image: url(../assets/img/mobile/foto-index-mobile.jpg);
-        background-position: cover;
+        object-fit: fill;
     }
     .container-index { /***  G R I D S  ***/
         height: 100vh;
