--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -70,11 +70,13 @@
 
 
     /*REGLAS ESPECIALES SOBRE MI - MOBILE*/
+    .container-bio { /***  F L E X B O X  ***/
+        row-gap: 100px;
+    }
     .texto-bio {
         margin: 40px;
         margin-bottom: 2.0rem;
     }
-
     .container-texto-bio {
         width: 90%;
         row-gap: 25px;
