--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -73,6 +73,9 @@
     .container-bio { /***  F L E X B O X  ***/
         row-gap: 100px;
     }
+    .foto-bio {
+        margin-bottom: 20px;
+    }
     .texto-bio {
         margin: 40px;
         margin-bottom: 2.0rem;
