Modifiqué estética de menú hamburguesa index

--- a/css/style.css
+++ b/css/style.css
@@ -128,11 +128,6 @@ footer {
 /*index*/
 .nav-hamburguesa-index {
   text-decoration: none;
-  --bs-dropdown-bg: $color-4;
-  --bs-navbar-color: #153c50;
-  --bs-navbar-hover-color: #153c50;
-  --bs-navbar-disabled-color: rgba(0, 0, 0, 0.3);
-  --bs-navbar-active-color:  #153c50;
   font-family: "Rubik Dirt", cursive;
   font-size: 1.9rem;
   color: #153c50; }
@@ -799,6 +794,11 @@ textarea {
     .navbar li:hover {
       /***  T R A N S I C I O N  ***/
       transform: scale(1.05); }
+  .navbar-nav {
+    --bs-navbar-color: #153c50;
+    --bs-navbar-hover-color: #153c50;
+    --bs-navbar-disabled-color: rgba(0, 0, 0, 0.3);
+    --bs-navbar-active-color:  #153c50; }
   .dropdown-menu {
     --bs-dropdown-font-size: 1.3rem;
     --bs-dropdown-border-color:$color-4;
