--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,8 @@
 @import "./layout/galeria";
 @import "./layout/agenda";
 @import "./layout/contacto";
+@import "./layout/media-1140w";
+@import "./layout/_media-1035w";
 @import "./layout/media-tablet";
 @import "./layout/media-mobile";
 
