--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -25,4 +25,9 @@ footer {
 .footer-pages {
     margin-top: 30px;
 }
+
+.footer-icon{
+    width: 32px;
+    height: 32px;
+}
 /*fin reglas del footer*/
