--- a/scss/layout/_agenda.scss
+++ b/scss/layout/_agenda.scss
@@ -25,16 +25,18 @@
 }
 
 .button-info {
-    @include typos ($font-3, 1.7rem, $color-2);
     font-weight: 500;
     background-color: $color-4;
     border: none;
-    text-decoration: none;
     cursor: pointer;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 5px;
     padding-bottom: 5px; 
+    a {
+        text-decoration: none; 
+        @include typos ($font-3, 1.7rem, $color-2);
+    }
 }
 
 .link-agenda-bio {
