Arreglé h2 bio + Reduje tiempo de animación de foto + agregué height auto a foto bio

--- a/scss/layout/_sobre-mi.scss
+++ b/scss/layout/_sobre-mi.scss
@@ -6,9 +6,10 @@
 
 .foto-bio {
     width: 100%;
+    height: auto;
     align-self: center;
     animation-name: slideInBio;
-    animation-duration: 3s;
+    animation-duration: 2000ms;
 }
 
 .slideInUpBio { /*** A N I M A C I O N    F O T O    B I O ***/
